samples/_failures_safe/1761285805_674a29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1160be43.c: In function ‘main’:
./samples/SAFE/__tmp_1160be43.c:163:14: error: expected declaration or statement at end of input
  163 |         enum State new_state = handle_event(&sm, &events[i]);
      |              ^~~~~
./samples/SAFE/__tmp_1160be43.c:163:14: error: expected declaration or statement at end of input
